# ai-infra-junior-engineer-solutions

./: CHANGELOG.md  CONTENT_VALIDATION_REPORT.md  CONTRIBUTING.md  CURRICULUM.md  DIRECTORY_MIGRATION_MAP.md  EXERCISE_SOLUTIONS_MAP.md  HOUSEKEEPING_REPORT.md  LEARNING_GUIDE.md  MISSING_GUIDES_DETAILED.md  MODULE_008_PROGRESS.md  PHASE_3_TRACKING.md  README.md  REPOSITORY_STATUS.md  SESSION_SUMMARY.md  SOLUTIONS_INDEX.md
.aicg/: audit-report.json  curriculum-nav-report.json  placeholder-cache.json  work-plan.json
.github/workflows/: generate-docs.yml  runtime-validation.yml  test-modules.yml  validate-solutions.yml
TEMPLATES/: ARCHITECTURE_TEMPLATE.md  IMPLEMENTATION_GUIDE.md  STEP_BY_STEP_TEMPLATE.md  TEST_TEMPLATE.py  TROUBLESHOOTING_TEMPLATE.md
guides/: README.md  common-pitfalls.md  debugging-guide.md  optimization-guide.md  production-readiness-checklist.md
modules/: EXERCISES_COMPLETION_REPORT.md
modules/mod-000-orientation/: README.md
modules/mod-001-foundations/: README.md
modules/mod-001-python-fundamentals/: MODULE_SUMMARY.md
modules/mod-001-python-fundamentals/exercise-08/: .gitignore  CHANGELOG.md  IMPLEMENTATION_GUIDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
modules/mod-001-python-fundamentals/exercise-08/examples/: usage_example.py
modules/mod-001-python-fundamentals/exercise-08/src/ml_infra_utils/: __init__.py
modules/mod-001-python-fundamentals/exercise-08/src/ml_infra_utils/decorators/: __init__.py  retry.py  timing.py
modules/mod-001-python-fundamentals/exercise-08/src/ml_infra_utils/logging/: __init__.py  structured.py
modules/mod-001-python-fundamentals/exercise-08/src/ml_infra_utils/metrics/: __init__.py  classification.py
modules/mod-001-python-fundamentals/exercise-08/src/ml_infra_utils/preprocessing/: __init__.py  normalization.py  validation.py
modules/mod-001-python-fundamentals/exercise-08/tests/: __init__.py  test_decorators.py  test_logging.py  test_metrics.py  test_preprocessing.py
modules/mod-002-python-programming/: README.md
modules/mod-003-git-version-control/: MODULE_COMPLETION_SUMMARY.md
projects/: README.md
resources/: README.md  additional-reading.md  community-resources.md  useful-tools.md
(+1231 files in other folders)
